fix: wrap tags in tag-list instead of column, fix theme toggle with OnPush

--- a/src/app/component/grid/grid-cell/grid-cell.component.scss
+++ b/src/app/component/grid/grid-cell/grid-cell.component.scss
@@ -7,13 +7,6 @@
   padding-block: 0.25rem;
 }
 
-.grid-list {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 0.25rem;
-}
-
 .grid-link,
 .grid-tag {
   overflow-wrap: anywhere;
